mutants.out.old/log/src__reflow.rs_line_509_col_5_004.log

*** src/reflow.rs:509:5: replace split_define -> Option<(String, Vec<Token<'src>>)> with Some(("xyzzy".into(), vec![Default::default()]))

*** mutation diff:
--- src/reflow.rs
+++ replace split_define -> Option<(String, Vec<Token<'src>>)> with Some(("xyzzy".into(), vec![Default::default()]))
@@ -501,44 +501,17 @@
 
 /// Split a `#define` into its `#define NAME(params) ` prefix text and its body tokens (with
 /// continuation backslashes removed and surrounding trivia trimmed). `None` if it has no body.
 fn split_define<'src>(
     toks: &[Token<'src>],
     start: usize,
     end: usize,
 ) -> Option<(String, Vec<Token<'src>>)> {
-    let define = next_nontrivia_in(toks, start + 1, end)?;
-    let name = next_nontrivia_in(toks, define + 1, end)?;
-    let prefix_end = match toks.get(name + 1) {
-        Some(n) if n.kind == TokenKind::Punct && n.text == "(" => {
-            match_bracket(toks, name + 1)? + 1
-        }
-        _ => name + 1,
-    };
-    let prefix: String = toks[start..prefix_end]
-        .iter()
-        .map(|t| t.text)
-        .collect::<String>()
-        + " ";
-    let mut body: Vec<Token> = toks[prefix_end..end]
-        .iter()
-        .filter(|t| !(t.kind == TokenKind::Punct && t.text == "\\"))
-        .copied()
-        .collect();
-    while body.first().is_some_and(is_trivia) {
-        body.remove(0);
-    }
-    while body.last().is_some_and(is_trivia) {
-        body.pop();
-    }
-    if body.is_empty() {
-        return None;
-    }
-    Some((prefix, body))
+    Some(("xyzzy".into(), vec![Default::default()])) /* ~ changed by cargo-mutants ~ */
 }
 
 /// Format a macro body if it is a single call/`_Generic` or a statement-expression; else `None`.
 fn format_define_body(body: &[Token], prefix_col: usize, width: usize) -> Option<String> {
     if contains_comment(body) {
         return None;
     }
     if is_call_head(body, 0) && match_bracket(body, 1) == Some(body.len() - 1) {


*** /home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --package=cfmt@0.1.0
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
       Fresh libc v0.2.186
       Fresh cfg-if v1.0.4
       Fresh unicode-ident v1.0.24
       Fresh proc-macro2 v1.0.106
       Fresh fnv v1.0.7
       Fresh memchr v2.8.2
       Fresh regex-syntax v0.8.11
       Fresh aho-corasick v1.1.4
       Fresh quote v1.0.46
       Fresh syn v2.0.118
       Fresh regex-automata v0.4.14
       Fresh getrandom v0.3.4
       Fresh rand_core v0.9.5
       Fresh logos-codegen v0.16.1
       Fresh linux-raw-sys v0.12.1
       Fresh autocfg v1.5.1
       Fresh bitflags v2.13.0
       Fresh rustix v1.1.4
       Fresh logos-derive v0.16.1
       Fresh getrandom v0.4.3
       Fresh zerocopy v0.8.52
       Fresh fastrand v2.4.1
       Fresh once_cell v1.21.4
       Fresh tempfile v3.27.0
       Fresh ppv-lite86 v0.2.21
       Fresh logos v0.16.1
       Fresh wait-timeout v0.2.1
       Fresh quick-error v1.2.3
       Fresh bit-vec v0.8.0
       Fresh bit-set v0.8.0
       Fresh rusty-fork v0.3.1
       Fresh num-traits v0.2.19
       Fresh rand_chacha v0.9.0
       Fresh rand_xorshift v0.4.0
       Fresh rand v0.9.4
       Fresh unarray v0.1.4
       Fresh proptest v1.11.0
       Dirty cfmt v0.1.0 (/tmp/cargo-mutants-c-format-01Z7wo.tmp): couldn't read metadata for file `target/debug/deps/libcfmt-99f850ce46e24a52.rlib`
   Compiling cfmt v0.1.0 (/tmp/cargo-mutants-c-format-01Z7wo.tmp)
     Running `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=3f53573a9b6bab2f -C extra-filename=-99f850ce46e24a52 --out-dir /tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/deps --extern logos=/tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/deps/liblogos-4c6e00a209650053.rmeta`
     Running `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a4b1a2cc4d498b46 -C extra-filename=-a84e12700bb01142 --out-dir /tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/deps --extern logos=/tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/deps/liblogos-4c6e00a209650053.rlib --extern proptest=/tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/deps/libproptest-f3a23dcc63ec6135.rlib`
error[E0277]: the trait bound `Token<'_>: Default` is not satisfied
   --> src/reflow.rs:509:32
    |
509 |     Some(("xyzzy".into(), vec![Default::default()])) /* ~ changed by cargo-mutants ~ */
    |                                ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `Token<'_>`
   --> src/lexer.rs:69:1
    |
 69 | pub struct Token<'src> {
    | ^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `cfmt` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=a4b1a2cc4d498b46 -C extra-filename=-a84e12700bb01142 --out-dir /tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/deps --extern logos=/tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/deps/liblogos-4c6e00a209650053.rlib --extern proptest=/tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/deps/libproptest-f3a23dcc63ec6135.rlib` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `cfmt` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/jp/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name cfmt --edition=2024 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 '--warn=clippy::pedantic' --forbid=unsafe_code '--allow=clippy::too_many_lines' '--allow=clippy::similar_names' '--allow=clippy::must_use_candidate' '--allow=clippy::assigning_clones' --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=3f53573a9b6bab2f -C extra-filename=-99f850ce46e24a52 --out-dir /tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/deps --extern logos=/tmp/cargo-mutants-c-format-01Z7wo.tmp/target/debug/deps/liblogos-4c6e00a209650053.rmeta` (exit status: 1)

*** result: Failure(101)
